<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ecffff"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/action_outcome"
                android:textColor="#157c7f"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@+id/cart"
                    android:src="@drawable/shelf" />

                <ImageView
                    android:id="@+id/cart"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_toLeftOf="@+id/shelf"
                    android:src="@drawable/cart" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="Nhân Viên A"
                android:textSize="13sp"
                android:id="@+id/username"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/pl_label"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:lines="1"
                android:id="@+id/outcome_pl_item"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/scan_label"
                android:id="@+id/outcome_scan_pl"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/id_label"
                android:textSize="15sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:textSize="13sp"
                android:lines="1"
                android:id="@+id/outcome_id_item"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/scan_label"
                android:id="@+id/outcome_scan_id"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/locate_label"
                android:textSize="15sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:textSize="13sp"
                android:lines="1"
                android:id="@+id/outcome_locate_item"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/scan_label"
                android:id="@+id/outcome_scan_locate"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textSize="15sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:lines="3"
                android:textSize="13sp"
                android:id="@+id/outcome_description_item"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/scan_label"
                android:id="@+id/outcome_scan_desc"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            >

            <com.journeyapps.barcodescanner.DecoratedBarcodeView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:id="@+id/barcode_view"
                app:zxing_preview_scaling_strategy="fitXY" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:text="@string/save_label"
                    android:id="@+id/btn_save"
                    android:layout_gravity="end"
                    android:textSize="13sp"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
